# ppp

lab2/: .gitignore  CMakeLists.txt  main.cpp
lab2studio/: .gitignore  lab2studio.sln
lab2studio/Debug/: lab2studio.ilk
lab2studio/lab2studio/: lab2studio.cpp  lab2studio.vcxproj  lab2studio.vcxproj.filters
lab4/: .gitignore  lab4.sln
lab4/Debug/: lab4.ilk
lab4/lab4/: lab4.cpp  lab4.vcxproj
lab4/lab4/Debug/: lab4.exe.recipe  vc142.idb
lab4/lab4/Debug/lab4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab5/: .gitignore  lab5.sln
lab5/lab5/: lab5.cpp  lab5.vcxproj
lab6/: .gitignore  lab6.sln
lab6/lab6/: lab6.cpp  lab6.vcxproj
lab7/: .gitignore  lab7.sln
lab7/lab7/: lab7.cpp  lab7.vcxproj
lab8/: .gitignore  lab8.sln
lab8/Debug/: lab8.ilk
lab8/lab8/: lab8.cpp  lab8.vcxproj  lab8.vcxproj.filters
lab8/lab8/Debug/: lab8.exe.recipe  vc142.idb
lab8/lab8/Debug/lab8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab8.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
